--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-t" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI OpenSCAD Generator</title>
+
+    <!-- Primary Meta Tags -->
+    <title>MakersAI Studio - AI-Powered 3D Model & Laser Cutting Generator</title>
+    <meta name="title" content="MakersAI Studio - AI-Powered 3D Model & Laser Cutting Generator" />
+    <meta name="description" content="Transform text prompts into print-ready STL files and laser-cuttable SVG designs. Built for makers with Anycubic printers. Free, open-source, and powered by Google Gemini AI." />
+    <meta name="keywords" content="3D printing, laser cutting, AI, OpenSCAD, STL generator, SVG generator, Anycubic, makers, 3D design, text to 3D" />
+    <meta name="author" content="Maria Fe Fischer" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://makersai.studio/" />
+    <meta property="og:title" content="MakersAI Studio - AI-Powered 3D Model Generator" />
+    <meta property="og:description" content="Transform text prompts into print-ready STL files and laser-cuttable SVG designs. Free and open-source." />
+    <meta property="og:image" content="https://makersai.studio/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://makersai.studio/" />
+    <meta property="twitter:title" content="MakersAI Studio - AI-Powered 3D Model Generator" />
+    <meta property="twitter:description" content="Transform text prompts into print-ready STL files and laser-cuttable SVG designs." />
+    <meta property="twitter:image" content="https://makersai.studio/og-image.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://makersai.studio/" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#14b8a6" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "MakersAI Studio",
+      "description": "AI-powered 3D model and laser cutting generator",
+      "url": "https://makersai.studio",
+      "applicationCategory": "DesignApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Maria Fe Fischer"
+      }
+    }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* For custom scrollbar styling */
